--- a/.gitignore
+++ b/.gitignore
@@ -178,8 +178,8 @@ mcp_test_frontend.html
 
 # ===== 文档和指南（可选） =====
 # 如果不想提交某些文档，可以取消注释
-# *.md
-# !README.md
+*.md
+!README.md
 
 # ===== 其他 =====
 # 包锁定文件（可选择性忽略）
