--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,35 +4,40 @@
   "private": true,
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
+    "@ant-design/colors": "^7.1.0",
+    "@ant-design/cssinjs": "^1.21.1",
+    "@ant-design/icons": "^5.4.0",
     "@excalidraw/excalidraw": "^0.17.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.25.1",
+    "antd": "^5.20.6",
+    "autoprefixer": "^10.4.19",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "katex": "^0.16.22",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^10.1.0",
+    "react-markdown": "^8.0.7",
     "react-pdf": "^6.2.2",
     "react-resizable": "^3.0.5",
     "react-rnd": "^10.5.2",
     "react-scripts": "5.0.1",
-    "rehype-katex": "^7.0.1",
-    "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
+    "rehype-katex": "^6.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "roughjs": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node start.js",
+    "start": "react-scripts start",
     "start-legacy": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-dev": "node start.js"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +60,14 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/react-resizable": "^3.0.8",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "http-proxy-middleware": "^3.0.5"
+  },
+  "resolutions": {
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
+    "rehype-katex": "^6.0.3"
   }
 }
