--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@stagewise/toolbar-react": "^0.4.4",
     "@types/file-saver": "^2.0.7",
     "@types/react-resizable": "^3.0.8",
     "ajv": "^8.17.1",
