--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@stagewise/toolbar-react": "^0.4.4",
+    "concurrently": "^7.6.0",
     "electron": "^28.0.0",
     "electron-builder": "^24.0.0",
-    "concurrently": "^7.6.0",
     "wait-on": "^7.0.1"
   },
   "eslintConfig": {
@@ -71,7 +72,10 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ]
     },
@@ -80,11 +84,15 @@
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         },
         {
           "target": "portable",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ]
     },
@@ -93,11 +101,15 @@
       "target": [
         {
           "target": "AppImage",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         },
         {
           "target": "deb",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ]
     },
@@ -108,4 +120,4 @@
       "createStartMenuShortcut": true
     }
   }
-} 
+}
